fix: navicon colors in dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -143,6 +143,12 @@ a:visited {
   color: var(--main-text-color);
 }
 
+.greedy-nav .navicon,
+.greedy-nav .navicon:before,
+.greedy-nav .navicon:after {
+  background: var(--main-text-color);
+}
+
 .greedy-nav a,
 .greedy-nav i {
 
